2010-01-03  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/as.h: template as<> to convert SEXP to classic
	C++ types, fcactored out of RObject
	
	* src/as.cpp: specific implementations. as<int>, as<bool>
	as<string>, ...
	
	* inst/unitTests/runit.as.R: unit tests

	* src/Rcpp/wrap.h : factored out from RObject. there is now a
	template wrap in addition to the specific implementations. The 
	template generates a warning and return NULL
	
	* src/wrap.cpp: specific implementations of the wrap template
	(factored out of RObject)

	* src/Rcpp/pairlist.h : variadic templates to 
	recursively generate a pairlist 
	(CAR and CDR) from any number of "wrap("'able objects. 
	(factored out of Language)  
	
	* src/pairlist.cpp: end of recursion for the above
	
	* src/Rcpp/grow.h : grow a pairlist with any wrappable 
	object. Used in pairlist
	
	* src/grow.cpp : specific implementation for Named object
	to allow tagging the head of the pairlist.
	
	* src/Rcpp/Named.h : new class Named that is used to specify
	named elements in a pairlist.
	
	* src/Named.cpp: implementation
	
	* src/Rcpp/RObject.h: added wrap(const char* const) RObject factory
	method

	* src/Rcpp/RObject.h: rework the garbage collection mechanism so that 
	it is automatic and hidden. methods preserve and release are now 
	private to the RObject class and the SEXP may only be changed using
	the protected setSEXP member function. isPreserved and forgetPreserve
	are defunct.
	
	* src/Rcpp/RObject.h: RObject gains assignment operators and copy constructors
	
	* src/RcppCommon.h: added the CXX0X define that controls whether
	we can use C++0x features offered by the gcc. currently the define
	is hardcoded, but this will eventually be a configure guess. The 
	canUseCXX0X function can be called to bring this back to R
	
	* R/RcppLdPath.R: added the canUseCXX0X R function to query 
	the internal canUseCXX0X function, use this in RcppCxxFlags so that 
	code linking against Rcpp (inline code or packages) can take 